--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ body {
 }
 
 .btn{
-  margin: 50 100 0 0
+  margin: 60 60 0 0
 }
 
 .meal_plan {
